[package]
name = "andromeda-fractional-nft"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
testing = ["cw-multi-test", "andromeda-testing"]

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils = { workspace = true }
cw20 = { workspace = true }
cw20-base = { workspace = true }
cw721 = { workspace = true }
cw721-base = { workspace = true }
andromeda-std = { workspace = true, features = ["rates"] }
andromeda-non-fungible-tokens = { workspace = true }
andromeda-fungible-tokens = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cw-multi-test = { workspace = true, optional = true }
andromeda-testing = { workspace = true, optional = true }
cw-orch = { workspace = true }

[dev-dependencies]
andromeda-app = { workspace = true }
